Resolve "Consulta Processo better and faster"